--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,12 +1,12 @@
-<form class="form-header">
+<div class="form-header">
 
-    <input #myInput 
+    <input #myInput type="text" 
            placeholder="Search for products ..."
-            class="au-input au-input-xl"
-            (key.enter)="doSearch(myInput.value)" />
+           class="au-input au-input-xl"
+           (keyup.enter)="doSearch(myInput.value)"  />
 
     <button (click)="doSearch(myInput.value)" class="au-btn-submit">
-        Search 
+        Search
     </button>
 
-</form>
+</div>
