--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,10 @@
     </div>
 
     <app-product-category-menu></app-product-category-menu>
-    
+
   </aside>
   <!-- END MENU SIDEBAR-->
 
-  <!-- PAGE CONTAINER-->
   <div class="page-container">
     <!-- HEADER DESKTOP-->
     <header class="header-desktop">
@@ -22,11 +21,10 @@
           <div class="header-wrap">
 
             <app-search></app-search>
-
+            
             <div class="cart-area d-n">
               <a href="shopping-detail.html">
-                <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart"
-                  aria-hidden="true"></i>
+                <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
               </a>
             </div>
           </div>
@@ -39,9 +37,11 @@
     <!-- MAIN CONTENT-->
     <router-outlet></router-outlet>
 
+  </div>
 </div>
 
 <!-- ENDS PAGE CONTAINER -->
+
 <footer>
   <ul>
     <li><a href="#">About Us</a></li>
@@ -49,4 +49,3 @@
     <li><a href="#">Help</a></li>
   </ul>
 </footer>
-
